opam-version: "2.0"
name: "dot-iris-builddep"
maintainer: "Paolo G. Giarrusso"
authors: "Paolo G. Giarrusso, Amin Timany, Léo Stefanesco"
homepage: "https://github.com/Blaisorblade/dot-iris"
bug-reports: "https://github.com/Blaisorblade/dot-iris/issues"
synopsis: "(Dependencies for) Mechanization of gDOT in Iris"
depends: [
  "coq" { (>= "8.13.0" & < "8.15~") }
  "coq-iris" { = "3.6.0" }
  "coq-autosubst" { = "1.7" }
]

build: [
  # Passing multiple targets to the top-level Makefile doesn't work robustly... even with `only` :-(
  [ make "test" "-j" jobs {with-test} ]
  [ make "-j" jobs ]
]
