opam-version: "2.0"
maintainer: "Paolo G. Giarrusso"
authors: "Paolo G. Giarrusso, Amin Timany, Léo Stefanesco"
homepage: "https://github.com/Blaisorblade/dot-iris"
bug-reports: "https://github.com/Blaisorblade/dot-iris/issues"
synopsis: "Mechanization of gDOT in Iris"
depends: [
  "coq" { (>= "8.15.0" & < "8.16~") }
  "coq-iris" { = "3.6.0" }
  "coq-autosubst" { >= "1.7" | = "dev" }
]

build: [
  # Passing multiple targets to the top-level Makefile doesn't work robustly... even with `only` :-(
  [ make "test" "-j" jobs "TIMED=1" {with-test} ]
  [ make "-j" jobs "TIMED=1" ]
]
